--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "simulation"]
 	path = simulation
 	url = https://github.com/reazon-research/openarm_simulation.git
+[submodule "ros2_packages"]
+	path = ros2_packages
+	url = https://github.com/reazon-research/openarm_ros2.git
