fixed write_baudrate and added read ctrl fb data

--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7.uvprojx
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7.uvprojx
@@ -710,6 +710,11 @@
               <FileType>1</FileType>
               <FilePath>..\User\bsp\led_bsp.c</FilePath>
             </File>
+            <File>
+              <FileName>can_bsp.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\User\bsp\can_bsp.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
