--- a/control/canfd_control/MDK-ARM/.gitignore
+++ b/control/canfd_control/MDK-ARM/.gitignore
@@ -2,6 +2,7 @@ STM32H7/
 DebugConfig/
 RTE/_STM32H7/
 RTE/Device/
-RTE/CMSIS-View/EventRecorderConf.h.base@1.1.0
+RTE/CMSIS-View/EventRecorderConf.h.base*
+
 *.uvoptx
 *.uvguix.*
